refactor: proofs by cluster ids
